fix: text align right fix for form elements

--- a/scss/components/_Forms.scss
+++ b/scss/components/_Forms.scss
@@ -27,7 +27,8 @@ $label-font-size: $font-size-base !default;
   outline: none;
   padding: $padding-small;
   width: 100%;
-  .rev-TextCenter & {
+  .rev-TextCenter &,
+  .rev-TextRight & {
     text-align: left;
   }
 
@@ -55,7 +56,8 @@ $label-font-size: $font-size-base !default;
   display: block;
   font-size: $label-font-size;
   margin: 0 0 $margin-base;
-  .rev-TextCenter & {
+  .rev-TextCenter &,
+  .rev-TextRight & {
     text-align: left;
   }
 
